# spindash

./: CMakeLists.txt  PLAN.md  README.md
.github/workflows/: build-desktop.yml
cmake/: QtDeployment.cmake
notes/: projects.md  research.md  sprites.md
res/: Chaos.aps  SpinDash.rc
src/: Block.cpp  Block.h  BlockDesc.h  Chunk.cpp  Chunk.h  Level.h  Palette.cpp  Palette.h  Pattern.cpp  Pattern.h  RingGroup.h
src/games/: Sonic2.cpp  Sonic2.h  Sonic2Level.cpp  Sonic2Level.h  Sonic2RingLayout.cpp  Sonic2RingLayout.h  Sonic3.cpp  Sonic3.h  Sonic3Level.cpp  Sonic3Level.h
src/ui/: BlockEditor.cpp  BlockEditor.h  BlockInspector.cpp  BlockInspector.h  ChunkEditor.cpp  ChunkEditor.h  ChunkInspector.cpp  ChunkInspector.h  ChunkSelector.cpp  ChunkSelector.h  MapEditor.cpp  MapEditor.h  PaletteEditor.cpp  PaletteEditor.h  PatternEditor.cpp  PatternEditor.h  PatternInspector.cpp  PatternInspector.h  Window.cpp  Window.h
test/: TestSonic2RingLayout.cpp
